fix(css): fixed overflow x

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -19,3 +19,7 @@
     transform: rotate(180deg);
   }
 }
+
+html, body {
+  overflow-x:hidden 
+} 
